   
===========
Changes log  
===========

- @version-full@ (@release-date@)
    - Breaking changes
        - The engine has been moved from "com.noelios.restlet" to
          the "org.restlet.engine" package, simplifying the packaging.
        - All engine extensions have been moved to "org.restlet.ext"
          packages.
        - The com.noelios.restlet.ext.spring extension has been merged
          with org.restlet.ext.spring.
    - API changes
        - A response with a 200 (Ok) status should have an entity. Now,
          we make sure that a warning is logged. 
          Reported by Rob Heittman.
        - Removed all code deprecated in the Restlet 1.1 release.
        - Added org.restlet.data.Literal to represent RDF
          literals with an optional datatype. 
        - Added org.restlet.data.Link to represent RDF links (aka 
          triples, statements or relationships).
    - Misc
        - JAX-RS extension:
            - added class ExendedUriBuilder with "file" extensions for
              content negotiation and an ExtendedUriInfo to get it.
            - Supports per-request-providers now.
            - JaxRsApplication will not clear the MetadataService (as
              before; was required to not use other extensions as given
              in the JAX-RS ApplicationConfig class).