@@ -42,6 +42,7 @@ import org.restlet.data.Protocol;
 import org.restlet.data.Reference;
 import org.restlet.data.Request;
 import org.restlet.data.Response;
+import org.restlet.engine.Helper;
 import org.restlet.resource.FileRepresentation;
 import org.restlet.resource.Representation;
 import org.restlet.resource.Resource;
@@ -49,7 +50,6 @@ import org.restlet.service.LogService;
 import org.restlet.service.StatusService;
 import org.restlet.util.ClientList;
 import org.restlet.util.Engine;
-import org.restlet.util.Helper;
 import org.restlet.util.ServerList;
 import org.restlet.util.Template;
 import org.restlet.util.Variable;
