@@ -51,6 +51,7 @@ import org.restlet.data.Parameter;
 import org.restlet.data.Product;
 import org.restlet.data.Request;
 import org.restlet.data.Response;
+import org.restlet.engine.Helper;
 import org.restlet.resource.Representation;
 import org.restlet.resource.Resource;
 import org.restlet.resource.Variant;
